--- a/themes/port-theme/src/WEB-INF/liferay-plugin-package.properties
+++ b/themes/port-theme/src/WEB-INF/liferay-plugin-package.properties
@@ -10,6 +10,7 @@ author=Liferay, Inc.
 licenses=LGPL
 liferay-versions=7.0.0+
 
-
-
+resources-importer-append-version=false
 resources-importer-developer-mode-enabled=true
+resources-importer-index-after-import=true
+resources-importer-update-mode-enabled=true
